--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "electron-with-server-example",
+  "description": "",
+  "author": {
+    "name": ""
+  },
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "public/electron.js",
+  "homepage": "./",
   "license": "MIT",
   "scripts": {
     "start:react": "react-scripts start",
-    "start": "concurrently -k \"BROWSER=none yarn start:react\" \"wait-on http://localhost:3000 && electron .\""
+    "start:electron": "electron public/electron.js",
+    "start": "concurrently -k 'BROWSER=none yarn start:react' 'wait-on http://localhost:3000 && yarn start:electron'",
+    "build:react": "react-scripts build",
+    "dist": "yarn build:react && build -m",
+    "postinstall": "electron-builder install-app-deps",
+    "test:react": "react-scripts test",
+    "format": "prettier --write {src,public}/**/*.{js,json,scss}",
+    "clean": "rimraf build dist"
   },
   "dependencies": {
-    "electron": "^5.0.4",
     "electron-is-dev": "^1.1.0",
     "node-ipc": "^9.1.1",
     "react": "^16.8.6",
@@ -18,13 +29,28 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.4",
     "concurrently": "^4.1.1",
-    "husky": "^2.7.0",
-    "lint-staged": "^8.2.1",
+    "electron": "^5.0.6",
+    "electron-builder": "^20.44.4",
+    "husky": "^3.0.0",
+    "lint-staged": "^9.1.0",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
+    "rimraf": "^2.6.3",
     "wait-on": "^3.2.0"
+  },
+  "build": {
+    "appId": "com.example.electron-cra",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "husky": {
     "hooks": {
@@ -41,18 +67,13 @@
     "arrowParens": "avoid",
     "bracketSpacing": true,
     "singleQuote": true,
-    "jsxBracketSameLine": true
+    "jsxBracketSameLine": true,
+    "trailingComma": "es5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    "last 1 Chrome versions"
+  ],
+  "engines": {
+    "node": ">=11.15.0"
   }
 }
